# CMake

./: .gitignore  .gitmodules  CMakeLists.txt  ImportThirdParty.md  Lecture.md  README.md  README_bak.md  main.cpp
.github/workflows/: ci.yml
01-cmake-basic-use/: README.md
01-cmake-basic-use/hello_world/: CMakeLists.txt  main.cpp
01-cmake-basic-use/hello_world/hello/: CMakeLists.txt  main.cpp
01-cmake-basic-use/object/: CMakeLists.txt
01-cmake-basic-use/object/include/: my_lib.h
01-cmake-basic-use/object/src/: main.cpp  my_lib.cpp
01-cmake-basic-use/thread/: CMakeLists.txt
02-static-dynamic-library/: CMakeLists.txt  README.md
02-static-dynamic-library/hello/: CMakeLists.txt  hello.cpp
02-static-dynamic-library/main/: CMakeLists.txt  main.cpp
02-static-dynamic-library/world/: CMakeLists.txt  world.cpp  world.h
03-import-external-project/: CMakeLists.txt  README.md
03-import-external-project/cmake/: spdlog.cmake
04-cross-compie/: CMakeLists.txt  README.md  main.cpp
05-testing/: CMakeLists.txt  README.md
05-testing/test/: CMakeLists.txt  gtest_test2.cpp
06-optimize/: CMakeLists.txt  README.md  hello.cpp  world.h
07-cuda/: README.md
Docs/: Lecture.md
abseil/: CMakeLists.txt  abseil_test.cpp
add_custom_command/: CMakeLists.txt  Makefile  README.md
add_dependencies/: CMakeLists.txt  main.cpp
advanced/: CMakeLists.txt  hello.cpp  main.cpp
arrow/: CMakeLists.txt  main.cpp
c_cpp_combine/: CMakeLists.txt  README.md  b.cpp  b.h  main.c
catch_single_header/: CMakeLists.txt
catch_test/: Lecture.md  hello.cpp
catch_v2/: compile_first.sh  first.cpp  hello.cpp
catch_v3/: CMakeLists.txt  bdd.cpp  benchmark.cpp  hello.cpp
chore/: CMakeLists.txt
chore/src/: CMakeLists.txt  c_readline.c  file_stream.cpp  game.cpp  main.cpp
cmake_advanced/: CMakeLists.txt  define_test.cpp
cmake_advanced/fetch_content/: CMakeLists.txt  main.cpp
cmake_advanced/find_package/: CMakeLists.txt
cmake_advanced/find_package/cmake/: Findleveldb.cmake
crc/: CMakeLists.txt  build.sh  main.cpp
duckdb/: CMakeLists.txt  build.sh  main.cpp
find_package/: CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp
folly/: CMakeLists.txt  folly_test.cpp
gtest/: CMakeLists.txt  README.md  a_contain_b_test.cpp  inner_test.cpp  non_virtual_method_test.cpp
gtest/cs/: client_server_test.cpp
import_external_project/: CMakeLists.txt  spdlog_test.cpp
include/: hello.h
install/lib/: libmy_math.dylib
leveldb/: CMakeLists.txt  RA.cpp  compile.sh  cs2310.cpp  leveldb_test.cpp  test.cpp
libhello/: CMakeLists.txt  hello.h
math/: CMakeLists.txt  main.cpp  mysqrt.h
object/: CMakeLists.txt  README.md  main.cpp
object/mid/: CMakeLists.txt
object/mid/add/: CMakeLists.txt  add.cpp
opencv/: CMakeLists.txt  README.md
openmp/: CMakeLists.txt  openmp_test.cpp
picobench/: CMakeLists.txt  picobench.hpp  picobench_test.cpp
protobuf/: CMakeLists.txt  README.md  person.pb.cc  person.pb.h  person.proto  yaojun_person.cpp
spdlog/: CMakeLists.txt  spdlog_test.cpp
src/: CMakeLists.txt  main.cpp  simple_test.cpp
src/include/: world.h
src/libhello/: CMakeLists.txt  README.md  hello.cpp  hello.h
src/math/: CMakeLists.txt  add.cpp
src/subworld/: CMakeLists.txt  world.cpp
target_compile_definitions/: CMakeLists.txt  README.md  main.cpp
target_compile_definitions/lib/: CMakeLists.txt  mylib.cpp  mylib.h
vcpkg/: CMakeLists.txt  README.md  vcpkg.json
vcpkg/src/: main.cpp
