cmake_minimum_required(VERSION 3.16)
project(spdlog_test)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(spdlog)
include_directories(${SPDLOG_INCLUDE_DIR})
add_executable(spdlog_test spdlog_test.cpp)
add_dependencies(spdlog_test spdlog)
target_link_libraries(spdlog_test PRIVATE ${SPDLOG_LIBRARIES})